syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Genry72/GophKeeper/proto";

message SecretTypeRequest{}

//  Доступные типы секретов
message SecretType {
  int64 id = 1;
  string name = 2;
}

// Ответ на получение типов секретов
message SecretTypeResponse {
  repeated SecretType secretsType = 1;
}

// Запрос на создание секрета
message CreateSecretRequest {
  string name = 1;
  int64 secretType = 2;
  bytes data = 3;
}

// Ответ на запрос создания секрета
message CreateSecretResponse {
  int64 id = 1;
  int64 userID = 2;
  int64 secretType = 3;
  string name = 4;
  bytes content = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Запрос на изменение секрета
message EditSecretRequest {
  int64 id = 1;
  string name = 2;
  bytes data = 3;
}

// Ответ на запрос изменения секрета
message EditSecretResponse {
  int64 id = 1;
  int64 userID = 2;
  int64 secretType = 3;
  string name = 4;
  bytes content = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Удаление секрета по ID
message DeleteSecretRequest {
  int64 id = 1;
}

message DeleteSecretResponse {}

// Запрос на получение секретов по ID типа секрета
message SecretsByTypeRequest {
  int64 secretType = 1;
}

// Ответ на получение секретов по ID типа секрета
message SecretsByTypeResponse {
  repeated SecretsList secrets = 1;
}

// Слайс секретов
message SecretsList {
  int64 id = 1;
  int64 userID = 2;
  int64 secretType = 3;
  string name = 4;
  bytes content = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

service Secret {
  rpc GetSecretTypes (SecretTypeRequest) returns (SecretTypeResponse);
  rpc CreateSecret (CreateSecretRequest) returns (CreateSecretResponse);
  rpc EditSecret (EditSecretRequest) returns (EditSecretResponse);
  rpc DeleteSecret (DeleteSecretRequest) returns (DeleteSecretResponse);
  rpc GetSecretsByType (SecretsByTypeRequest) returns (SecretsByTypeResponse);
}